...
  android:id="@+id/ScrollView01"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  >

  <LinearLayout
    android:id="@+id/LinearLayout01"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.0">

    <android.support.constraint.ConstraintLayout
      android:id="@+id/RelativeLayout01"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      >

      <EditText
          android:id="@+id/name"
          android:layout_width="match_parent"
          android:layout_height="40dp"
          android:layout_marginStart="16dp"
          android:layout_marginTop="16dp"
          android:layout_marginEnd="16dp"
          android:layout_marginBottom="8dp"
          android:ems="10"
          android:hint="@string/create_profile_name"
          android:inputType="textPersonName"
          app:layout_constraintBottom_toTopOf="@+id/date_of_birth"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintVertical_chainStyle="packed"
          tools:text="@string/create_profile_name" />

...
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/create_profile_date_of_birth"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/gender_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        tools:text="@string/create_profile_date_of_birth"/>

      <Spinner
...
          android:layout_marginStart="16dp"
          android:layout_marginTop="8dp"
          android:layout_marginEnd="16dp"
          android:text="@string/create_profile_are_you"
          android:textAlignment="viewStart"
          android:textSize="18sp"
          app:layout_constraintBottom_toTopOf="@+id/user_type"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/gender_spinner"
          tools:text="@string/create_profile_are_you" />
      <RadioGroup
        android:id="@+id/user_type"
...
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/drug_of_choice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/are_you">
        <RadioButton
          android:id="@+id/radioSupport"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:buttonTint="@color/res_gold"
          android:text="@string/create_profile_support"
          android:visibility="visible"
          tools:text="@string/create_profile_support"
            android:checked="true"/>
        <RadioButton
          android:id="@+id/radioClient"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:buttonTint="@color/res_gold"
          android:text="@string/create_profile_client"
          android:visibility="visible"
          tools:text="@string/create_profile_client"/>
...
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/create_profile_drugs"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/drug_selection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_type"
        tools:text="@string/create_profile_drugs"/>
      <RadioGroup
        android:id="@+id/drug_selection"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/enter_other"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drug_of_choice">
        <RadioButton
          android:id="@+id/radioHeroin"
          android:layout_width="match_parent"
...
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:buttonTint="@color/res_gold"
          android:text="@string/create_profile_other_tranquil"
          tools:text="@string/create_profile_other_tranquil"/>
        <RadioButton
          android:id="@+id/radioSedatives"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:buttonTint="@color/res_gold"
          android:text="@string/create_profile_sedatives"
          tools:text="@string/create_profile_sedatives"/>
        <RadioButton
          android:id="@+id/radioInhalants"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:buttonTint="@color/res_gold"
          android:text="@string/create_profile_inhalants"
          tools:text="@string/create_profile_inhalants"/>
        <RadioButton
          android:id="@+id/radioOther"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:buttonTint="@color/res_gold"
          android:text="@string/create_profile_other"
          tools:text="@string/create_profile_other"/>
...
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/create_profile_substance_use"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/use_type_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_other"
        tools:text="@string/create_profile_substance_use"/>
      <Spinner
        android:id="@+id/use_type_spinner"
...
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:dropDownWidth="match_parent"
        android:entries="@array/create_profile_use_type_array"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/clean_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/substance_use"/>
      <EditText
        android:id="@+id/clean_date"
        android:layout_width="0dp"
...
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/create_profile_clean_date"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/record_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/use_type_spinner"
        tools:text="@string/create_profile_clean_date"/>
      <Button
        android:id="@+id/record_button"
...
