...
    android:textAlignment="center"
    android:textColor="@android:color/black"
    android:textSize="45sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>
  <Button
    android:id="@+id/start_landing_button_create"
    android:layout_width="140dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="56dp"
    android:layout_marginEnd="108dp"
    android:background="@drawable/ic_button_rectangle"
    android:text="@string/activity_startup_create"
...
